--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,3 +22,8 @@ jobs:
         with:
           branch: gh-pages
           folder: build
+
+      - name: Налаштування Git
+        run: |
+          git remote rm origin
+          git remote add origin https://github.com/AndrijAyzy/goit-react-hw-02-feedback.git
